# ATP_Eindopdracht

./: .gitignore  CMakeLists.txt  atp eindverslag.docx  cppFunctions.cp38-win_amd64.pyd  led.cp38-win_amd64.pyd  magnetoSensor.cp38-win_amd64.pyd  magnetoSensor.h  main.cpp  motor.cp38-win_amd64.pyd  pythonConnection.cpp  pythonConnection.h  readme.md  servo.cp38-win_amd64.pyd  setup.py  test.cpp  test.h  zonnePositieSensor.h  zonneSensor.cp38-win_amd64.pyd
CppCode/: CppFunctions.cpp  main.cpp
CppCode/Led/: Led.cpp  Led.h
CppCode/MagnetoSensor/: magnetoSensor.cpp  magnetoSensor.h
CppCode/Motor/: Motor.cpp  Motor.h
CppCode/Servo/: Servo.cpp  Servo.h
CppCode/ZonneSenor/: zonnePositieSensor.cpp  zonnePositieSensor.h
PythonCode/: Python.py  Tests.py
